--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "urvan-ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "start": "node index.js",
-    "start-watch": "nodemon index.js",
+    "start": "node server\\server.js",
+    "start-watch": "nodemon server\\server.js",
     "dev": "concurrently \"yarn run start-watch\" \"cd client && yarn start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.11"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.11",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
