--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.11",
     "paystack": "^2.0.1",
+    "react-paystack": "^2.0.2",
     "validator": "^13.0.0"
   },
   "devDependencies": {
