--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "bcryptjs": "^2.4.3",
     "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.4",
     "mongoose": "^5.9.11",
+    "mongoose-deep-populate": "^3.2.0",
     "multer": "^1.4.2",
     "paystack": "^2.0.1",
     "react-paystack": "^2.0.2",
